--- a/clase02/shopping-cart/src/app/header/header.component.html
+++ b/clase02/shopping-cart/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header>
+    <span>My Store</span>
+    <div class="cart">
+        <img src="/assets/img/cart.png" alt="">
+        <span class="cart">Mi Carrito</span>
+    </div>
+</header>
