--- a/clase02/shopping-cart/src/app/app.component.html
+++ b/clase02/shopping-cart/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-header></app-header>
 <div class="content">
-    <div class="product"><app-product></app-product></div>
-    <div class="product"><app-product></app-product></div>
-    <div class="product"><app-product></app-product></div>
-    <div class="product"><app-product></app-product></div>
-    <div class="product"><app-product></app-product></div>
+    <div class="product" *ngFor="let p of products">
+        <app-product [product] = "p"></app-product></div>
     <div class="product"><app-product></app-product></div>
 </div>
 <app-footer></app-footer>
