--- a/clase02/shopping-cart/src/app/header/header.component.html
+++ b/clase02/shopping-cart/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <span>My Store</span>
-    <div class="cart">
+    <div class="cart" (onclick)="showCart()">  
         <img src="/assets/img/cart.png" alt="">
         <span class="cart">Mi Carrito</span>
     </div>
