--- a/clase03/shopping-cart/src/app/product/product.component.scss
+++ b/clase03/shopping-cart/src/app/product/product.component.scss
@@ -22,6 +22,7 @@
     span {
         font-size: 1rem;
         font-weight: bold;
+        
     }
 
     button {
@@ -31,5 +32,6 @@
         font-weight: bold;
         border-radius: 10px;
         color: white;
+        cursor: pointer;
     }
 }
